Miscellaneous code cleanup (#399)